# simple-ai-text-detector

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.py  pyproject.toml
configs/: config.yaml
configs/baseline/: baseline.yaml
configs/data/: data.yaml
configs/download_data/: download_data.yaml
configs/model/: bert.yaml
data/raw/: .gitignore  AI_Human.csv.dvc
mlflow/: docker-compose.yml
models/: model.pkl.dvc
reports/: .gitignore  classification_report.txt.dvc  confusion_matrix.txt.dvc
simple_ai_text_detector/: infer.py  train.py
simple_ai_text_detector/data/: dataset.py  download_data.py
simple_ai_text_detector/models/: baseline.py  model.py
